--- a/src/components/Main/Portfolio/Portfolio.css
+++ b/src/components/Main/Portfolio/Portfolio.css
@@ -23,12 +23,31 @@
   padding: 0;
 }
 
+.portfolio__links-item {
+  margin-top: 20px;
+  border-bottom: 1px solid #424242;
+  padding-bottom: 9px;
+}
+
+.portfolio__links-item:first-child {
+  margin: 0;
+}
+
+.portfolio__links-item:last-child {
+  border: none;
+  padding-bottom: 0;
+}
+
+.portfolio__links-item:hover {
+  opacity: 0.5;
+  transition: 0.5s;
+}
+
 .portfolio__link {
+  text-decoration: none;
   display: flex;
   justify-content: space-between;
   margin: 0;
-  margin-top: 20px;
-  padding-bottom: 9px;
   color: #fff;
   font-family: Inter;
   font-size: 30px;
@@ -36,16 +55,6 @@
   font-weight: 400;
   line-height: 50px; /* 166.667% */
   letter-spacing: -1.2px;
-  border-bottom: 1px solid #424242;
-}
-
-.portfolio__link:first-child {
-  margin: 0;
-}
-
-.portfolio__link:last-child {
-  border: none;
-  padding-bottom: 0;
 }
 
 .portfolio__arrow {
@@ -62,7 +71,7 @@
 
 @media screen and (max-width: 790px) {
   .portfolio {
-    padding: 0 50px;
+    padding: 0 50px 79px;
   }
 
   .portfolio__link {
@@ -74,11 +83,11 @@
 
 @media screen and (max-width: 500px) {
   .portfolio {
-    padding: 0 14px;
+    padding: 0 14px 58px;
   }
 
   .portfolio__link {
-    padding-bottom: 19px;
+    padding-bottom: 10px;
     font-size: 18px;
     line-height: 28px; /* 155.556% */
     letter-spacing: -0.72px;
